# compiler-homework

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bc.cc
tests/: parser-tests.sh
